@@ -37,6 +37,8 @@ Goals for 0.51 release:
 Changes up to 0.51
 
    * depth_cue toggle setting (important for low-end PC hardware)
+ 
+   * specular reflections
 
 Changes up to 0.50
 
